<resources>
    <string name="app_name">Taste Trouve</string>
    <string name="welcome">Welcome</string>
    <string name="channel">TastyTrouve</string>
    <string name="appetizer">Appetizer</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="kids_menu">Kids menu</string>
    <string name="view_all">View All</string>
    <string name="top_selling">Top Selling Dishes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recipes">Recipes</string>
    <string name="dishes">Dishes</string>
    <string name="settings">Settings</string>
    <string name="salmon">Salmon</string>
    <string name="price_digit">$ 20.00</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="mexican">Mexican</string>
    <string name="items">Items</string>
    <string name="item_name">Item Name</string>
    <string name="quantity_digit">1</string>
    <string name="delivery_time">40 min</string>
    <string name="random_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="calorie_digit">328 kcal</string>
    <string name="boarding_one_text">Varieties of Dishes</string>
    <string name="boarding_two_text">Special Offers</string>
    <string name="boarding_three_text">Sign up now to enjoy deliciousness!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or_login_with">or sign up with</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone_number">Phone number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="no_result">No Result</string>
    <string name="search_for_item">Search for items</string>
    <string name="favourites">Favourites</string>
    <string name="comming_soon">Coming soon</string>
    <string name="user_is_already_registered">User is already registered</string>

    <string name="your_order">Your Order</string>

    <string name="english">English</string>
    <string name="french">French</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="donot_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="enter_correct_password">Enter correct Password</string>
    <string name="email_does_not_exist">Email does not Exist in Database. Please SignUp First</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="enter_valid_email">Enter valid E-Mail address</string>
    <string name="password_condition">Password must be between 8 to 20 and contain at least one special symbol, uppercase, lowercase and number</string>
    <string name="phone_required">Phone is required</string>
    <string name="birthDate_required">Date of birth is required</string>
    <string name="user_creation_failed">User creation failed</string>
    <string name="user_created">User created</string>
    <string name="forgot_paasword">Forgot Password</string>
    <string name="fill_out_email_phone">Don\'t worry! Just fill in your email or \nPhone number and we\'ll send you a link\n or otp to reset your password</string>
    <string name="verification">Verification</string>
    <string name="sent_otp_text">We have sent you an OTP\nPlease Enter below to verify forgot password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_new_confidential_password">Please choose new credentials for your account</string>
    <string name="password_updated_successfully">Password updated Successfully</string>
    <string name="we_have_sent_otp">We have sent you an OTP to</string>
    <string name="enter_below_to_varify_otp">\nPlease Enter below to verify forgot password</string>
    <string name="enter_valid_code">Please enter valid code</string>
    <string name="otp_varification_successfuly">Otp Verification completed successfully</string>
    <string name="otp_failed">Otp Verification Failed</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDI3N2LJ0049Exfjp6P49FWtYoel3x_1pY</string>
    <string name="manager_profile">Manage Profile</string>
    <string name="logout">Logout</string>
    <string name="manage_address">Manage Address</string>
    <string name="logout_warning_messagae">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="add__new_address">Add new address</string>
    <string name="save">Save</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="cart_failure">Failed to add to cart</string>
    <string name="quantity_not_in_stock">Quantity is not stock</string>
    <string name="order_placed">Order is placed</string>
    <string name="threshold_condition">Order is placed, but this order can be picked up only</string>
    <string name="card_error">Card number should be 16 digit</string>
    <string name="cvv_error">Cvv number should be 3 digit</string>
    <string name="my_orders">My Orders</string>
    <string name="please_add_address">Please add address in Setting screen</string>
    <string name="no_product">No Products</string>

    <string name="theme">Change Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiaGFyaWtyaXNobmFkYXJhamkiLCJhIjoiY2tuOTVjbzBmMTRsbDJvcGg4aHo2bHE2aSJ9.Qo0K6OT0fA0vAwsTZi0zXw</string>
    <string name="light" translatable="false">light</string>
    <string name="dark" translatable="false">dark</string>

    <string name="facebook_app_id">323269916119130</string>
    <string name="fb_login_protocol_scheme">fb323269916119130</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_favourite_container" translatable="false">FavouriteContainerActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="title_activity_main2" translatable="false">MainActivity2</string>
    <string name="track_order">Track Order</string>
    <string name="offers_for_you">Offers For You</string>
    <string name="christmas">Christmas</string>
    <string name="black_friday">Black Friday</string>
    <string name="boxing_day">Boxing Day</string>
    <string name="new_year">New Year</string>
    <string name="share">Share</string>
    <string name="remove_from_favourite">Remove from Favourites</string>
    <string name="add_to_favorite">Add to Favourites</string>
</resources>
