<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="15dp"
    android:elevation="15dp"
    android:background="?attr/backgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

 <LinearLayout
     android:background="?attr/backgroundColor"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <de.hdodenhof.circleimageview.CircleImageView
         android:src="@drawable/image_placeholder"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:id="@+id/circleImg" />
    <TextView
        android:textAlignment="center"
        android:text="@string/salmon"
        android:layout_marginTop="10dp"
        android:id="@+id/nameTV"
        android:textSize="17dp"
        android:textColor="?attr/textColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   <TextView
       android:textAlignment="center"
       android:text="@string/mexican"
       android:id="@+id/typeTV"
       android:layout_marginTop="10dp"
       android:textSize="13dp"
       android:textColor="?attr/textColor"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
  <TextView
      android:textAlignment="center"
      android:text="@string/price_digit"
      android:id="@+id/priceTV"
      android:layout_marginTop="10dp"
      android:textSize="17dp"
      android:textColor="@color/red"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <androidx.cardview.widget.CardView
      android:layout_marginTop="15dp"
      android:layout_marginBottom="15dp"
      android:layout_gravity="center"
      app:cardCornerRadius="10dp"
      app:cardElevation="10dp"
      android:layout_width="70dp"
      android:layout_height="40dp">
   <RelativeLayout
       android:id="@+id/viewRelative"
       android:background="@color/red"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <TextView
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:text="@string/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
   </RelativeLayout>
  </androidx.cardview.widget.CardView>
 </LinearLayout>

</androidx.cardview.widget.CardView>