<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".Activities.ResetPasswordActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text = "@string/change_password"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="50dp"
        android:textStyle="bold" />
    <TextView
        android:textColor="?attr/textColor"
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:layout_gravity="center"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="?attr/textColor"
        android:hint="@string/new_password"
        android:textColorHint="?attr/textColor"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        tools:layout_editor_absoluteY="339dp" />
    <ImageView
        app:tint="?attr/textColor"
        android:id="@+id/imageViewShow1"
        android:layout_width="34dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNewPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextNewPassword"
        app:srcCompat="@drawable/sifinal" />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal">
    <EditText
        android:textColorHint="?attr/textColor"
        android:textColor="?attr/textColor"
        android:id="@+id/editTextConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        />

    <ImageView
        app:tint="?attr/textColor"
        android:id="@+id/imageViewShow2"
        android:layout_width="34dp"
        android:layout_marginTop="30dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/sifinal" />
</LinearLayout>
    <TextView
        android:textColor="?attr/textColor"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_new_confidential_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/imageButtonResetPassword"
        android:layout_width="382dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        app:srcCompat="@drawable/fp" />


</LinearLayout>
</LinearLayout>