<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.cardview.widget.CardView-->
<!--    android:elevation="0dp"-->
<!--    app:cardMaxElevation="0dp"-->
<!--    android:orientation="vertical"-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/top_rounded_shape"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/image_placeholder"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>

        <TextView
            android:textAlignment="center"
            android:text="@string/salmon"
            android:layout_marginTop="10dp"
            android:id="@+id/topItemNameTV"
            android:textSize="17dp"
            android:textColor="?attr/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:text="@string/price_digit"
            android:id="@+id/topItemPriceTV"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/viewRelative"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
<!--</androidx.cardview.widget.CardView>-->