<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Activities.SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/bannerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_get_started"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="?attr/textColor"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/full_name"
            android:textColorHint="?attr/textColor"
            app:hintTextColor="?attr/textColor"
            app:hintAnimationEnabled="true"
            android:paddingStart="15dp"
            android:background="@drawable/text_box"
            android:paddingEnd="15dp"
            app:endIconMode="custom"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="?attr/textColor"
            android:inputType="textEmailAddress"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:background="@drawable/text_box"
                android:textColorHint="?attr/textColor"
                android:textColor="?attr/textColor"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/email"
            android:textColorHint="?attr/textColor"
            app:hintTextColor="?attr/textColor"
            app:hintAnimationEnabled="true"
            android:paddingStart="15dp"
            android:background="@drawable/text_box"
            android:paddingEnd="15dp"
            app:endIconMode="custom"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="?attr/textColor"
            android:inputType="textEmailAddress"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmailId"
                android:layout_width="match_parent"
                android:background="?attr/backgroundColor"
                android:textColorHint="?attr/textColor"
                android:textColor="?attr/textColor"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:textColorHint="?attr/textColor"
            app:hintTextColor="?attr/textColor"
            app:hintAnimationEnabled="true"
            android:paddingStart="15dp"
            android:background="@drawable/text_box"
            android:paddingEnd="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?attr/textColor"
            android:inputType="textPassword"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:background="@drawable/text_box"
                app:passwordToggleEnabled="true"
                android:textColorHint="?attr/textColor"
                app:passwordToggleTint="?attr/textColor"
                android:textColor="?attr/textColor"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/phone_number"
            android:textColorHint="?attr/textColor"
            app:hintTextColor="?attr/textColor"
            app:hintAnimationEnabled="true"
            android:paddingStart="15dp"
            android:background="@drawable/text_box"
            android:paddingEnd="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleTint="?attr/textColor"
            android:inputType="number"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:inputType="number"
                android:background="@drawable/text_box"
                android:textColorHint="?attr/textColor"
                app:passwordToggleTint="?attr/textColor"
                android:textColor="?attr/textColor"
                android:layout_height="match_parent">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/date_of_birth"
            android:textColorHint="?attr/textColor"
            app:hintTextColor="?attr/textColor"
            app:hintAnimationEnabled="true"
            android:paddingStart="15dp"
            android:background="@drawable/text_box"
            android:paddingEnd="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleTint="?attr/textColor"
            android:inputType="date"
            android:layout_height="60dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DateOfBirth"
                android:layout_width="match_parent"
                android:inputType="date"
                android:background="@drawable/text_box"
                android:textColorHint="?attr/textColor"
                app:passwordToggleTint="?attr/textColor"
                android:textColor="?attr/textColor"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/imageButtonSignUp"
            android:layout_width="236dp"
            android:layout_height="47dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateOfBirth"
            app:srcCompat="@drawable/su" />

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginEnd="10dp"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="?attr/textColor"
                android:textSize="20dp" />

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/textViewSignIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="?attr/textColor"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>