<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:background="?attr/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarTop">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/topHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/settings"
                    android:textColor="?attr/textColor"
                    android:textSize="25dp"></TextView>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/manageProfileLinear"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/manager_profile"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:id="@+id/manageAddressLinear"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/manage_address"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:id="@+id/addressListLinear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/addressRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:id="@+id/addNewAddressLinear"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/search_shape"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">
                    <TextView
                        android:textColor="?attr/textColor"
                        android:layout_centerInParent="true"
                        android:text="@string/add__new_address"
                        android:id="@+id/addAddressTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/logoutLinear"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>